[project]
name = "pycrypt"
version = "0.1.0"
description = ""
authors = [
    {name = "Aravindaksha Balaji", email = "aravindakshabalaji@gmail.com"},
    {name = "Arnav Guntur", email = "arnavguntur.2009@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "pycrypt", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
