[project]
name = "pycrypt"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Aravindaksha Balaji", email = "aravindakshabalaji@gmail.com" },
    { name = "Arnav Guntur", email = "arnavguntur.2009@gmail.com" },
]
requires-python = ">=3.14"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.basedpyright]
typeCheckingMode = "recommended"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
