[project]
name = "pycrypt-lib"
version = "0.9.0"
description = "A pure Python implementation of cryptographic primitives, written in a clean, Pythonic, and type-safe way."
readme = "README.md"
authors = [
    { name = "Aravindaksha Balaji", email = "aravindakshabalaji@gmail.com" },
    { name = "Arnav Guntur", email = "arnavguntur.2009@gmail.com" },
]
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.3",
    "egcd>=3.0.0",
    "primefac>=2.0.12",
]

[project.urls]
Homepage = "https://github.com/WallWarm/pycrypt"
Repository = "https://github.com/WallWarm/pycrypt"
Issues = "https://github.com/WallWarm/pycrypt/issues"

[tool.uv.build-backend]
module-name = "pycrypt"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.basedpyright]
typeCheckingMode = "recommended"
ignore = [
    "tests/*.py"
]

[tool.ruff]
exclude = [
    "tests/*.py"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
